--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "url": "https://github.com/mise-en-place/utilities.visibility.git"
   },
   "author": "Kind",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mep-tools.global-config": "github:mise-en-place/tools.global-config",
+    "breakpoint-sass": "^2.7.1"
+  }
 }
